--- a/index.html
+++ b/index.html
@@ -28,8 +28,31 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <!-- Title -->
   <title>dots_desktop</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Firebase JS SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-analytics.js"></script>
+
+  <!-- Initialize Firebase -->
+  <script>
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyDqjqMjKGgfwV8-osKn-3yoFh57ah8b8wQ",
+        authDomain: "dots-b3559.firebaseapp.com",
+        projectId: "dots-b3559",
+        storageBucket: "dots-b3559.appspot.com",
+        messagingSenderId: "861546983434",
+        appId: "1:861546983434:web:fd98c2676ea4263d856ff3",
+        measurementId: "G-PEWCB5EWDH"
+    };
+
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const analytics = firebase.analytics(app);
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
